--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>complete responsive flower website design tutorial</title>
+    <title>Flower Shop</title>
 
     <!-- font awesome cdn link  -->
     <link
@@ -430,7 +430,7 @@
       </div>
 
       <div class="credit">
-        created by <span> mr. web designer </span> | all rights reserved
+        created by <span> Abdirahman Aden </span> | all rights reserved
       </div>
     </section>
 
